:white_check_mark: Testes unitários do Repositorio de Categoria de Produto

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,9 +1,10 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/sevenfood
-spring.datasource.username=postgres
-spring.datasource.password=Postgres2019!
+spring.datasource.url=jdbc:h2:mem:sevenfood;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=validate
 
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.poolName=SpringBootHikariCP
 spring.datasource.maximumPoolSize=5
 spring.datasource.minimumIdle=3
@@ -20,3 +21,7 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 #hibernate.dialect=org.hibernate.dialect.H2Dialect
 #hibernate.hbm2ddl.auto=creates
+
+# Habilitar console do H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
