--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -3,6 +3,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.poolName=SpringBootHikariCP
@@ -19,8 +20,8 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 #jdbc.driverClassName=org.h2.Driver
 #jdbc.url=jdbc:h2:mem:myDb;DB_CLOSE_DELAY=-1;NON_KEYWORDS=KEY,VALUE
 
-#hibernate.dialect=org.hibernate.dialect.H2Dialect
-#hibernate.hbm2ddl.auto=creates
+hibernate.dialect=org.hibernate.dialect.H2Dialect
+hibernate.hbm2ddl.auto=create-drop
 
 # Habilitar console do H2
 spring.h2.console.enabled=true
