--- a/pom.xml
+++ b/pom.xml
@@ -27,14 +27,19 @@
             **/controller/debug/**/*,
             src/test/**/*,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/RunApplication.java,
-            src/main/java/br/com/sevenfood/product/sevenfoodproductapi/commons/exception/**,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/application/api/exception/**,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/application/api/dto/**,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/application/api/mapper/**,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/commons/config/**,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/commons/util/**,
+            src/main/java/br/com/sevenfood/product/sevenfoodproductapi/commons/exception/**,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/core/utils/**,
-            src/main/java/br/com/sevenfood/product/sevenfoodproductapi/infrastructure/entity/domain/**
+            src/main/java/br/com/sevenfood/product/sevenfoodproductapi/infrastructure/entity/domain/**,
+            src/main/java/br/com/sevenfood/product/sevenfoodproductapi/core/ports/**,
+            src/main/java/br/com/sevenfood/product/sevenfoodproductapi/application/database/mapper/**,
+            src/main/java/br/com/sevenfood/product/sevenfoodproductapi/application/api/mapper/**,
+            src/main/java/br/com/sevenfood/product/sevenfoodproductapi/commons/Constants.java,
+            **/api/mappper/*Mapper.java
         </sonar.exclusions>
         <sonar.dependencyCheck.basePath>
             ${project.basedir}/owasp-dependency-check-logs
@@ -50,14 +55,19 @@
             **/controller/debug/**/*,
             src/test/**/*,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/RunApplication.java,
-            src/main/java/br/com/sevenfood/product/sevenfoodproductapi/commons/exception/**,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/application/api/exception/**,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/application/api/dto/**,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/application/api/mapper/**,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/commons/config/**,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/commons/util/**,
+            src/main/java/br/com/sevenfood/product/sevenfoodproductapi/commons/exception/**,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/core/utils/**,
-            src/main/java/br/com/sevenfood/product/sevenfoodproductapi/infrastructure/entity/domain/**
+            src/main/java/br/com/sevenfood/product/sevenfoodproductapi/infrastructure/entity/domain/**,
+            src/main/java/br/com/sevenfood/product/sevenfoodproductapi/core/ports/**,
+            src/main/java/br/com/sevenfood/product/sevenfoodproductapi/application/database/mapper/**,
+            src/main/java/br/com/sevenfood/product/sevenfoodproductapi/application/api/mapper/**,
+            src/main/java/br/com/sevenfood/product/sevenfoodproductapi/commons/Constants.java,
+            **/api/mappper/*Mapper.java
         </sonar.coverage.exclusions>
         <sonar.sources>src,pom.xml</sonar.sources>
         <sonar.test.inclusions>src/test/**/*</sonar.test.inclusions>
