--- a/infra/sonar/docker-compose.yml
+++ b/infra/sonar/docker-compose.yml
@@ -27,6 +27,8 @@ services:
       - sonarqube_data:/opt/sonarqube/data
       - sonarqube_extensions:/opt/sonarqube/extensions
       - sonarqube_logs:/opt/sonarqube/logs
+    sysctls:
+      - net.core.somaxconn=65535
 
 volumes:
   postgres_data:
