--- a/pom.xml
+++ b/pom.xml
@@ -20,55 +20,37 @@
         <maven.compiler.release>17</maven.compiler.release>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
         <jacoco.version>0.8.12</jacoco.version>
-        <sonar.coverage.jacoco.xmlReportPaths>
-            ../app-it/target/site/jacoco-aggregate/jacoco.xml
-        </sonar.coverage.jacoco.xmlReportPaths>
+        <sonar.coverage.jacoco.xmlReportPaths>../app-it/target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
         <sonar.exclusions>
             **/controller/debug/**/*,
             src/test/**/*,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/RunApplication.java,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/application/api/exception/**,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/application/api/dto/**,
-            src/main/java/br/com/sevenfood/product/sevenfoodproductapi/application/api/mapper/**,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/commons/config/**,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/commons/util/**,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/commons/exception/**,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/core/utils/**,
-            src/main/java/br/com/sevenfood/product/sevenfoodproductapi/infrastructure/entity/domain/**,
-            src/main/java/br/com/sevenfood/product/sevenfoodproductapi/core/ports/**,
-            src/main/java/br/com/sevenfood/product/sevenfoodproductapi/application/database/mapper/**,
-            src/main/java/br/com/sevenfood/product/sevenfoodproductapi/application/api/mapper/**,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/commons/Constants.java,
-            **/api/mappper/*Mapper.java
+            pom.xml
         </sonar.exclusions>
-        <sonar.dependencyCheck.basePath>
-            ${project.basedir}/owasp-dependency-check-logs
-        </sonar.dependencyCheck.basePath>
-        <sonar.dependencyCheck.htmlReportPath>
-            ${sonar.dependencyCheck.basePath}/dependency-check-report.html
-        </sonar.dependencyCheck.htmlReportPath>
-        <sonar.dependencyCheck.jsonReportPath>
-            ${sonar.dependencyCheck.basePath}/dependency-check-report.json
-        </sonar.dependencyCheck.jsonReportPath>
-        <sonar.dependencyCheck.summarize>true</sonar.dependencyCheck.summarize>
         <sonar.coverage.exclusions>
-            **/controller/debug/**/*,
-            src/test/**/*,
+            pom.xml,\
+            **/controller/debug/**/*,\
+            src/test/**/*,\
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/RunApplication.java,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/application/api/exception/**,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/application/api/dto/**,
-            src/main/java/br/com/sevenfood/product/sevenfoodproductapi/application/api/mapper/**,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/commons/config/**,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/commons/util/**,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/commons/exception/**,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/core/utils/**,
-            src/main/java/br/com/sevenfood/product/sevenfoodproductapi/infrastructure/entity/domain/**,
-            src/main/java/br/com/sevenfood/product/sevenfoodproductapi/core/ports/**,
-            src/main/java/br/com/sevenfood/product/sevenfoodproductapi/application/database/mapper/**,
-            src/main/java/br/com/sevenfood/product/sevenfoodproductapi/application/api/mapper/**,
             src/main/java/br/com/sevenfood/product/sevenfoodproductapi/commons/Constants.java,
-            **/api/mappper/*Mapper.java
         </sonar.coverage.exclusions>
+        <sonar.dependencyCheck.basePath>${project.basedir}/owasp-dependency-check-logs</sonar.dependencyCheck.basePath>
+        <sonar.dependencyCheck.htmlReportPath>${sonar.dependencyCheck.basePath}/dependency-check-report.html</sonar.dependencyCheck.htmlReportPath>
+        <sonar.dependencyCheck.jsonReportPath>${sonar.dependencyCheck.basePath}/dependency-check-report.json</sonar.dependencyCheck.jsonReportPath>
+        <sonar.dependencyCheck.summarize>true</sonar.dependencyCheck.summarize>
         <sonar.sources>src,pom.xml</sonar.sources>
         <sonar.test.inclusions>src/test/**/*</sonar.test.inclusions>
         <sonar.tests>src</sonar.tests>
