:buid Acerto no swagger e repolatorio do OWASP ZAP TOP 10

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,6 +46,11 @@ spring:
         secret-key: ${AWS_SECRET_ACCESS_KEY}
     region:
       static: us-east-1
+
+swagger:
+  api:
+    url: https://localhost:9924/api
+
   #security:
   #  oauth2:
   #    client:
