--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,8 @@ server:
       enabled: false
 
 spring:
+  application:
+    name: sevenfood-product-api
   main:
     allow-circular-references: true
   datasource:
@@ -49,7 +51,7 @@ spring:
 
 swagger:
   api:
-    url: https://localhost:9924/api
+    url: ${SWAGGER_API_URL}
 
 logging:
   pattern:
@@ -61,12 +63,12 @@ management:
       enabled: true
     enabled: true
     propagation:
-      type: 'w3c '
+      type: 'W3C'
     sampling:
       probability: 1.0 # para enviar 100% da amostra'
   zipkin:
     tracing:
-      endpoint: 'http://18.212.8.96/api/v2/spans # alterar o endereco do Zipkin'
+      endpoint: ${ZIPKIN_URL}
   #security:
   #  oauth2:
   #    client:
